[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MORL-Baselines"
description="Implementations of multi-objective reinforcement learning (MORL) algorithms."
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Florian Felten & Lucas Alegre", email = "lucasnale@gmail.com" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "Multi-Objective", "RL", "AI", "gymnasium"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "mo-gym >=0.2.1",
    "gymnasium >=0.26",
    "numpy >=1.21.0",
    "torch >=1.11.0",
    "pygame >=2.1.0",
    "scipy >=1.7.3",
    "pymoo >=0.6.0",
    "cvxpy",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest ==7.1.3", "mock ==4.0.3"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["morl_baselines", "morl_baselines.*"]

[tool.setuptools.package-data]
morl_baselines = []

# Linting, testing, ... ########################################################
[tool.black]
safe = true
line-length = 127
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["morl_baselines"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
