[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morl-baselines"
description="Implementations of multi-objective reinforcement learning (MORL) algorithms."
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Florian Felten & Lucas Alegre", email = "lucasnale@gmail.com" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "Multi-Objective", "RL", "AI", "gymnasium"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "mo-gymnasium >=1.0.1",
    "gymnasium>=0.28.1,<0.30",
    "numpy >=1.21.0",
    "torch >=1.12.0",
    "pygame >=2.1.0",
    "scipy >=1.7.3",
    "pymoo >=0.6.0",
    "wandb >=0.14.0",
    "imageio",
    "moviepy",
    "seaborn",
    "cvxpy",
    "fire",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
# OLS requires pycddlib and libgmp to be installed, which does not work on MacOS for now.
ols = ["pycddlib"]
gpi = ["pycddlib"]

all = [
    # OLS & GPI
    "pycddlib",
]
testing = ["pytest ==7.1.3"]

[project.urls]
Homepage = "https://lucasalegre.github.io/morl-baselines/"
Repository = "https://github.com/LucasAlegre/morl-baselines"
Documentation = "https://lucasalegre.github.io/morl-baselines/"
"Bug Report" = "https://github.com/LucasAlegre/morl-baselines/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["morl_baselines", "morl_baselines.*", "examples", "examples.*"]

[tool.setuptools.package-data]
morl_baselines = ["*.json", "assets/*"]

# Linting, testing, ... ########################################################
[tool.black]
safe = true
line-length = 127
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["morl_baselines"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
